--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,14 @@ jobs:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+      - name: Delete existing container if exists
+        run: |
+            az container delete \
+              --name posts \
+              --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} \
+              --yes || true
+      
       - name: 'Run az commands to deploy container'
         run: |
           az container create \
