--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,8 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+    outputs:
+      image_tag: ${{ steps.project.outputs.tag }}
     steps:
       - uses: actions/checkout@v4
       - name: Set up JDK 21
@@ -39,6 +41,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - uses: actions/checkout@v4
       - name: 'Az CLI login'
         uses: azure/login@v2
         with:
@@ -58,7 +61,7 @@ jobs:
           az container create \
             --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} \
             --name posts \
-            --image ${{ secrets.DOCKERHUB_USERNAME }}/posts:${{ steps.project.outputs.tag }} \
+            --image ${{ secrets.DOCKERHUB_USERNAME }}/posts:${{ needs.build.outputs.image_tag }} \
             --registry-login-server index.docker.io \
             --registry-username ${{ secrets.DOCKERHUB_USERNAME }} \
             --registry-password ${{ secrets.DOCKERHUB_READ_TOKEN }} \
@@ -66,4 +69,4 @@ jobs:
             --ports 8080 \
             --os-type Linux \
             --cpu 1 \
-            --memory 1.5 \
+            --memory 1.5
